exercises/pingandlogoutput-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: exercises
  name: pinglog-ingress
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 2347
      - path: /
        pathType: Prefix
        backend:
          service:
            name: string-generator-svc
            port:
              number: 2346
